Simplification of a couple of functions.

--- a/OracleDockerDatabaseCreate.ipynb
+++ b/OracleDockerDatabaseCreate.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,63 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <tr>\n",
-       "        <th>Tag</th>\n",
-       "        <th>id</th>\n",
-       "        <th>Size</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>dominicgiles:db18.0.0</td>\n",
-       "        <td>b4e9063e4d</td>\n",
-       "        <td>10.8 GB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>db18.0.0:latest</td>\n",
-       "        <td>ab9b3eb4b6</td>\n",
-       "        <td>942.8 MB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td></td>\n",
-       "        <td>bf1b5daee4</td>\n",
-       "        <td>318.0 MB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>oraclelinux:7-slim</td>\n",
-       "        <td>c3d8693881</td>\n",
-       "        <td>117.3 MB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>giaas.us.oracle.com:5001/dominic.giles/104213:db19000</td>\n",
-       "        <td>808b7de5b5</td>\n",
-       "        <td>7.8 GB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>dbtools-docker.dockerhub-den.oraclecorp.com/oracle/sdw:18.4.0</td>\n",
-       "        <td>af2d2f4838</td>\n",
-       "        <td>1.8 GB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>dbtools-docker.dockerhub-den.oraclecorp.com/oracle/database:18.3.0-ee</td>\n",
-       "        <td>c9eae81d87</td>\n",
-       "        <td>8.4 GB</td>\n",
-       "    </tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list_images(client)"
    ]
@@ -105,14 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# The following parameters are specific to your install and almost certainly need to be changed\n",
-    "image_name = 'b4e9063e4d' # Taken from the id value above\n",
-    "host_oradata = '/Users/dgiles/oradata18c' # The directory on the host where primary database will be persisted\n",
-    "sb_host_oradata = '/Users/dgiles/oradatastby' # The direcotry on the host where the standby database will be persisted\n",
+    "image_name = 'cc75a47617' # Taken from the id value above\n",
+    "host_oradata = '/Users/dgiles/Downloads/dockerdbs/oradataprimary' # The directory on the host where primary database will be persisted\n",
+    "sb_host_oradata = '/Users/dgiles/Downloads/dockerdbs/oradatastby' # The direcotry on the host where the standby database will be persisted\n",
     "#\n",
     "# The rest are fairly generic and can be changed if needed\n",
     "oracle_version = '18.0.0'\n",
@@ -144,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +110,9 @@
     "                                       environment={'PATH':path,'ORACLE_SID': db_name, 'ORACLE_BASE': o_base,'TNS_ADMIN': t_admin}\n",
     "                                       )\n",
     "\n",
-    "p_container.start()\n"
+    "p_container.start()\n",
+    "# Make all of the containers attributes available via Python Docker API\n",
+    "p_container.reload()\n"
    ]
   },
   {
@@ -176,71 +124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[WARNING] [DBT-06208] The 'SYS' password entered does not conform to the Oracle recommended standards.\n",
-      "   CAUSE: \n",
-      "a. Oracle recommends that the password entered should be at least 8 characters in length, contain at least 1 uppercase character, 1 lower case character and 1 digit [0-9].\n",
-      "b.The password entered is a keyword that Oracle does not recommend to be used as password\n",
-      "   ACTION: Specify a strong password. If required refer Oracle documentation for guidelines.\n",
-      "[WARNING] [DBT-06208] The 'SYSTEM' password entered does not conform to the Oracle recommended standards.\n",
-      "   CAUSE: \n",
-      "a. Oracle recommends that the password entered should be at least 8 characters in length, contain at least 1 uppercase character, 1 lower case character and 1 digit [0-9].\n",
-      "b.The password entered is a keyword that Oracle does not recommend to be used as password\n",
-      "   ACTION: Specify a strong password. If required refer Oracle documentation for guidelines.\n",
-      "[WARNING] [DBT-06208] The 'PDBADMIN' password entered does not conform to the Oracle recommended standards.\n",
-      "   CAUSE: \n",
-      "a. Oracle recommends that the password entered should be at least 8 characters in length, contain at least 1 uppercase character, 1 lower case character and 1 digit [0-9].\n",
-      "b.The password entered is a keyword that Oracle does not recommend to be used as password\n",
-      "   ACTION: Specify a strong password. If required refer Oracle documentation for guidelines.\n",
-      "Prepare for db operation\n",
-      "\n",
-      "8% complete\n",
-      "\n",
-      "Copying database files\n",
-      "\n",
-      "31% complete\n",
-      "Creating and starting Oracle instance\n",
-      "\n",
-      "32% complete\n",
-      "36% complete\n",
-      "\n",
-      "40% complete\n",
-      "\n",
-      "43% complete\n",
-      "\n",
-      "46% complete\n",
-      "\n",
-      "Completing Database Creation\n",
-      "\n",
-      "51% complete\n",
-      "53% complete\n",
-      "54% complete\n",
-      "\n",
-      "Creating Pluggable Databases\n",
-      "58% complete\n",
-      "\n",
-      "77% complete\n",
-      "Executing Post Configuration Actions\n",
-      "\n",
-      "100% complete\n",
-      "\n",
-      "Database creation complete. For details check the logfiles at:\n",
-      " /u01/app/oracle/cfgtoollogs/dbca/ORCL.\n",
-      "Database Information:\n",
-      "Global Database Name:ORCL\n",
-      "System Identifier(SID):ORCL\n",
-      "\n",
-      "Look at the log file \"/u01/app/oracle/cfgtoollogs/dbca/ORCL/ORCL.log\" for further details.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "statement = f'''dbca -silent \\\n",
     " -createDatabase \\\n",
@@ -278,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,45 +214,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LSNRCTL for Linux: Version 18.0.0.0.0 - Production on 14-MAR-2019 19:40:59\n",
-      "\n",
-      "Copyright (c) 1991, 2018, Oracle.  All rights reserved.\n",
-      "Starting /u01/app/oracle/product/18.0.0/dbhome_1/bin/tnslsnr: please wait...\n",
-      "TNSLSNR for Linux: Version 18.0.0.0.0 - Production\n",
-      "System parameter file is /u01/app/oracle/oradata/dbconfig/listener.ora\n",
-      "Log messages written to /u01/app/oracle/diag/tnslsnr/oracleprimary/listener/alert/log.xml\n",
-      "Listening on: (DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=172.17.0.2)(PORT=1521)))\n",
-      "Listening on: (DESCRIPTION=(ADDRESS=(PROTOCOL=ipc)(KEY=EXTPROC1521)))\n",
-      "\n",
-      "Connecting to (DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=172.17.0.2)(PORT=1521)))\n",
-      "STATUS of the LISTENER\n",
-      "------------------------\n",
-      "Alias                     LISTENER\n",
-      "Version                   TNSLSNR for Linux: Version 18.0.0.0.0 - Production\n",
-      "Start Date                14-MAR-2019 19:40:59\n",
-      "Uptime                    0 days 0 hr. 0 min. 0 sec\n",
-      "Trace Level               off\n",
-      "Security                  ON: Local OS Authentication\n",
-      "SNMP                      OFF\n",
-      "Listener Parameter File   /u01/app/oracle/oradata/dbconfig/listener.ora\n",
-      "Listener Log File         /u01/app/oracle/diag/tnslsnr/oracleprimary/listener/alert/log.xml\n",
-      "Listening Endpoints Summary...\n",
-      "  (DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=172.17.0.2)(PORT=1521)))\n",
-      "  (DESCRIPTION=(ADDRESS=(PROTOCOL=ipc)(KEY=EXTPROC1521)))\n",
-      "Services Summary...\n",
-      "Service \"ORCL_DGMGRL\" has 1 instance(s).\n",
-      "  Instance \"ORCL\", status UNKNOWN, has 1 handler(s) for this service...\n",
-      "The command completed successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "containter_exec(p_container, 'lsnrctl start')"
    ]
@@ -375,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At this stage you'll have a "
+    "At this stage you should have a fully functioning Oracle Database. In theory there's no need to go any further if thats all you want."
    ]
   },
   {
@@ -404,7 +254,9 @@
     "                                       volumes={sb_host_oradata: {'bind': container_oradata, 'mode': 'rw'}},\n",
     "                                       environment={'PATH':path,'ORACLE_SID':db_name,'ORACLE_BASE':o_base,'TNS_ADMIN':t_admin}\n",
     "                                       )\n",
-    "sb_container.start()\n"
+    "sb_container.start()\n",
+    "# Make all of the containers attributes available via Python Docker API\n",
+    "sb_container.reload()\n"
    ]
   },
   {
@@ -420,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_containers()"
+    "list_containers(client)"
    ]
   },
   {
@@ -532,7 +384,9 @@
    "metadata": {},
    "source": [
     "### Configure the servers for Data Guard\n",
-    "Connect to primary and standby servers and set various parameters and configuration to enable us to run Data Guard.\n",
+    "It might be necessary to pause for a few seconds before moving onto the next step to allow the database to register with the listener...\n",
+    "\n",
+    "The next step is to connect to primary and standby servers and set various parameters and configuration to enable us to run Data Guard.\n",
     "\n",
     "First check the status of archive logging on the primary."
    ]
@@ -572,7 +426,7 @@
     "EOF\n",
     "'''\n",
     "\n",
-    "create_and_run_script(contents, '/tmp/set_archivelog.sql', '/tmp/set_archivelog.sql',  '/bin/bash /tmp/set_archivelog.sql', p_container)"
+    "create_and_run_script(contents, '/tmp/set_archivelog.sql',  '/bin/bash /tmp/set_archivelog.sql', p_container)"
    ]
   },
   {
@@ -698,7 +552,7 @@
     "contents = f'''STARTUP NOMOUNT PFILE='/tmp/init{db_name}.ora';\n",
     "EXIT;\n",
     "'''\n",
-    "create_and_run_script(contents, '/tmp/start_db.sql', '/tmp/start_db.sql', 'sqlplus / as sysdba @/tmp/start_db.sql', sb_container)"
+    "create_and_run_script(contents, '/tmp/start_db.sql', 'sqlplus / as sysdba @/tmp/start_db.sql', sb_container)"
    ]
   },
   {
@@ -726,7 +580,7 @@
     "EOF\n",
     "'''\n",
     "\n",
-    "create_and_run_script(contents, '/tmp/duplicate.sh', '/tmp/duplicate.sh', \"/bin/bash /tmp/duplicate.sh\", sb_container)"
+    "create_and_run_script(contents, '/tmp/duplicate.sh', \"/bin/bash /tmp/duplicate.sh\", sb_container)"
    ]
   },
   {
@@ -771,7 +625,7 @@
     "EOF\n",
     "'''\n",
     "\n",
-    "create_and_run_script(contents, '/tmp/dgconfig.sh', '/tmp/dgconfig.sh', \"/bin/bash /tmp/dgconfig.sh\", p_container)\n",
+    "create_and_run_script(contents, '/tmp/dgconfig.sh', \"/bin/bash /tmp/dgconfig.sh\", p_container)\n",
     "\n"
    ]
   },
@@ -796,7 +650,7 @@
     "EOF\n",
     "'''\n",
     "\n",
-    "create_and_run_script(contents, '/tmp/dgconfig2.sh', '/tmp/dgconfig2.sh', \"/bin/bash /tmp/dgconfig2.sh\", p_container)"
+    "create_and_run_script(contents, '/tmp/dgconfig2.sh', \"/bin/bash /tmp/dgconfig2.sh\", p_container)"
    ]
   },
   {
@@ -820,7 +674,7 @@
     "EOF\n",
     "'''\n",
     "\n",
-    "create_and_run_script(contents, '/tmp/dgconfig3.sh', '/tmp/dgconfig3.sh', \"/bin/bash /tmp/dgconfig3.sh\", p_container)"
+    "create_and_run_script(contents, '/tmp/dgconfig3.sh', \"/bin/bash /tmp/dgconfig3.sh\", p_container)"
    ]
   },
   {
@@ -845,7 +699,7 @@
     "EOF\n",
     "'''\n",
     "\n",
-    "create_and_run_script(contents, '/tmp/dgconfig4.sh', '/tmp/dgconfig4.sh', \"/bin/bash /tmp/dgconfig4.sh\", p_container)"
+    "create_and_run_script(contents, '/tmp/dgconfig4.sh', \"/bin/bash /tmp/dgconfig4.sh\", p_container)"
    ]
   },
   {
@@ -870,28 +724,15 @@
     "EOF\n",
     "'''\n",
     "\n",
-    "create_and_run_script(contents, '/tmp/convert_to_active.sh', '/tmp/convert_to_active.sh', \"/bin/bash /tmp/convert_to_active.sh\", sb_container)"
+    "create_and_run_script(contents, '/tmp/convert_to_active.sh', \"/bin/bash /tmp/convert_to_active.sh\", sb_container)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And finally open the PDB on both the primary and standby to enable us to begin testing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sb_connection = cx_Oracle.connect(\"sys\",sys_password,f\"//localhost:1522/{stby_name}\", mode=cx_Oracle.SYSDBA)\n",
-    "sb_cursor = sb_connection.cursor()\n",
-    "\n",
-    "cursor.execute(\"ALTER PLUGGABLE DATABASE SOE OPEN\")\n",
-    "cursor.execute(\"ALTER PLUGGABLE DATABASE SOE SAVE STATE\")\n",
-    "sb_cursor.execute(\"ALTER PLUGGABLE DATABASE SOE OPEN\")\n"
+    "### Standby Database Creation Complete\n",
+    "We now have a primary and standby database that we can begin testing with."
    ]
   },
   {
@@ -932,7 +773,7 @@
     "EOF\n",
     "'''\n",
     "\n",
-    "create_and_run_script(contents, '/tmp/convert_to_active.sh', '/tmp/convert_to_active.sh', \"/bin/bash /tmp/convert_to_active.sh\", sb_container)"
+    "create_and_run_script(contents, '/tmp/convert_to_active.sh', \"/bin/bash /tmp/convert_to_active.sh\", sb_container)"
    ]
   },
   {
@@ -959,7 +800,7 @@
     "EOF\n",
     "'''\n",
     "\n",
-    "create_and_run_script(contents, '/tmp/max_avail.sh', '/tmp/max_avail.sh', \"/bin/bash /tmp/max_avail.sh\", p_container)"
+    "create_and_run_script(contents, '/tmp/max_avail.sh', \"/bin/bash /tmp/max_avail.sh\", p_container)"
    ]
   },
   {
@@ -986,7 +827,7 @@
     "EOF\n",
     "'''\n",
     "\n",
-    "create_and_run_script(contents, '/tmp/max_prot.sh', '/tmp/max_prot.sh', \"/bin/bash /tmp/max_prot.sh\", p_container)"
+    "create_and_run_script(contents, '/tmp/max_prot.sh', \"/bin/bash /tmp/max_prot.sh\", p_container)"
    ]
   },
   {
@@ -1013,14 +854,16 @@
     "EOF\n",
     "'''\n",
     "\n",
-    "create_and_run_script(contents, '/tmp/max_prot.sh', '/tmp/max_prot.sh', \"/bin/bash /tmp/max_prot.sh\", p_container)"
+    "create_and_run_script(contents, '/tmp/max_prot.sh', \"/bin/bash /tmp/max_prot.sh\", p_container)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Oracle Database 19c Acvtive Data Guard DML Redirect"
+    "### Oracle Database 19c Acvtive Data Guard DML Redirect\n",
+    "\n",
+    "On Oracle Database 19c we can also enable DML redirect from the standby to the primary. I'll add this on the release of the Oracle Database 19c software for on premises."
    ]
   },
   {
