--- a/OracleDockerDatabaseFunctions.ipynb
+++ b/OracleDockerDatabaseFunctions.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,13 +143,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_and_run_script(script, script_local_path, script_target_path,  command, target):\n",
+    "def create_and_run_script(script, script_target_path, command, target):\n",
     "    \n",
-    "    copy_to(script, script_local_path, target.name+\":\"+script_target_path)\n",
+    "#     copy_to(script, script_local_path, target.name+\":\"+script_target_path)\n",
+    "\n",
+    "    copy_string_to_file(script, script_target_path, target)\n",
     "\n",
     "    print(command)\n",
     "    target.start()\n",
